--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ body{
 .day, .month, .year{
     font-family: Arial, Helvetica, sans-serif;
     margin-top: 20px;
-    margin-right: 5px;
+    margin-right: 17px;
     padding-right: 20px;
     margin-bottom: 10px;
 }
@@ -38,12 +38,14 @@ label{
     color: gray;
     font-size: 10px ;
     font-weight: 600;
+    font-size: medium;
 }
 
 select{
     width: 60px;
     height: 30px;
     font-weight: 800;
+    border-style: 2px solid rgb(107, 116, 126);
 }
 
 input[type="number"]{
@@ -103,12 +105,13 @@ p{
 #reset-button{
     background-color:  rgb(107, 116, 126);
     justify-content: center;
-    margin: -2rem 0px 0px 150px;
+    margin: -2rem 0px 0px 110px;
     padding: 0.5rem;
     color: lightgray;
     border-radius: 10px;
     border-style: none;
-    width: 8rem;
+    width: 12rem;
+    font-size: larger;
 }
 
 
